# all-little-projects

./: README.md  calculator -chun-chinese.py  calculator V1.1(chinese version).py  calculator-final.py  main.py  pa'chong.py  新建 RTF 文档.java
pgzero test game/: main.py
untitled/: CMakeLists.txt  main.cpp
新建文件夹/: main.py
